--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -10,8 +10,13 @@
     strong {
         font-weight: 500;
     }
+
+    &--blue {
+        color: $mainBlue;
+    }
     &__icon {
-        
+        position: relative;
+        top: 8px;
         margin-left: auto;
         margin-right: auto;
         display: block;
